--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Normalize.css for consistent styling across browsers -->
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/3.0.2/normalize.css"
-    />
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css" />
     <link rel="stylesheet" href="shared/main.css" />
     <link rel="stylesheet" href="shared/slick.css" />
 
-    <!-- Load jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="shared/js/slick.min.js"></script>
-    <script src="shared/js/scripts.js"></script>
   </head>
   <body>
     <!-- Header Section -->
@@ -54,28 +47,19 @@
             <div class="container">
               <div class="linksItem">
                 <div class="itemImage">
-                  <img
-                    src="shared/images/staff-img.webp"
-                    alt="Staff Directory"
-                  />
+                  <img src="shared/images/staff-img.webp" alt="Staff Directory" />
                 </div>
                 <div class="itemName">Staff List</div>
               </div>
               <div class="linksItem">
                 <div class="itemImage">
-                  <img
-                    src="shared/images/donate-img.webp"
-                    alt="Donate to School"
-                  />
+                  <img src="shared/images/donate-img.webp" alt="Donate to School" />
                 </div>
                 <div class="itemName">Donate</div>
               </div>
               <div class="linksItem">
                 <div class="itemImage">
-                  <img
-                    src="shared/images/foodMenu-img.webp"
-                    alt="View Food Menu"
-                  />
+                  <img src="shared/images/foodMenu-img.webp" alt="View Food Menu" />
                 </div>
                 <div class="itemName">Food Menu</div>
               </div>
@@ -97,10 +81,7 @@
                   </div>
                   <div class="eventInfo">
                     <h3 class="eventTitle">
-                      <a href="#"
-                        >No Uniform Day for classes that met their United Way
-                        goal</a
-                      >
+                      <a href="#" >No Uniform Day for classes that met their United Way goal</a>
                     </h3>
                     <small class="eventTime">6:30 PM - 8:30 PM</small>
                   </div>
@@ -125,9 +106,7 @@
                   </div>
                   <div class="eventInfo">
                     <h3 class="eventTitle">
-                      <a href="#"
-                        >National Adult Baseball Association - Baseball Field</a
-                      >
+                      <a href="#" >National Adult Baseball Association - Baseball Field</a>
                     </h3>
                     <small class="eventTime">6:30 PM - 8:30 PM</small>
                     <small class="eventVanue">Baseball Field</small>
@@ -140,10 +119,7 @@
                   </div>
                   <div class="eventInfo">
                     <h3 class="eventTitle">
-                      <a href="#"
-                        >No Uniform Day for classes that met their United Way
-                        goal</a
-                      >
+                      <a href="#">No Uniform Day for classes that met their United Way goal</a>
                     </h3>
                     <small class="eventTime">6:30 PM - 8:30 PM</small>
                   </div>
@@ -212,9 +188,7 @@
                   <!-- <div class="newsImg"></div> -->
                   <div class="newsInfo">
                     <h3 class="newsTitle">
-                      <a href="#"
-                        >Box Tops for Education Program Due in One Week</a
-                      >
+                      <a href="#">Box Tops for Education Program Due in One Week</a>
                     </h3>
                     <p>
                       The library is collecting Box Tops to help raise funds for
@@ -255,21 +229,13 @@
             <div class="albumList">
               <div class="albumItem">
                 <figure class="albumImg">
-                  <a href="#"
-                    ><img
-                      src="shared/images/ourSchool-img.webp"
-                      alt="Our School"
-                  /></a>
+                  <a href="#"><img src="shared/images/ourSchool-img.webp" alt="Our School"/></a>
                 </figure>
                 <div class="albumTitle"><a href="#">Our School</a></div>
               </div>
               <div class="albumItem">
                 <figure class="albumImg">
-                  <a href="#"
-                    ><img
-                      src="shared/images/schoolLife-img.webp"
-                      alt="School Life"
-                  /></a>
+                  <a href="#"><img src="shared/images/schoolLife-img.webp" alt="School Life"/></a>
                 </figure>
                 <div class="albumTitle"><a href="#">School Life</a></div>
               </div>
@@ -317,5 +283,10 @@
       <div class="inside"><!-- Do Not Change Anything Here --></div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Load jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="shared/js/slick.min.js"></script>
+    <script src="shared/js/scripts.js"></script>
   </body>
 </html>
