--- a/index.html
+++ b/index.html
@@ -27,16 +27,32 @@
         <section class="bannerWrapper">
           <div class="featuredSlider">
             <div class="slideItem">
-              <img src="shared/images/banner-img.webp" alt="Slide 1" />
+              <picture>
+                <source media="(min-width: 992px)" srcset="shared/images/banner1.webp">
+                <source media="(min-width: 768px)" srcset="shared/images/banner1-M.webp">
+                <img src="shared/images/banner1-S.webp" alt="Slide 1" />
+              </picture>              
             </div>
             <div class="slideItem">
-              <img src="shared/images/banner2.webp" alt="Slide 2" />
+              <picture>
+                <source media="(min-width: 992px)" srcset="shared/images/banner2.webp">
+                <source media="(min-width: 768px)" srcset="shared/images/banner2-M.webp">
+                <img src="shared/images/banner2-S.webp" alt="Slide 2" />
+              </picture> 
             </div>
             <div class="slideItem">
-              <img src="shared/images/banner3.webp" alt="Slide 3" />
+              <picture>
+                <source media="(min-width: 992px)" srcset="shared/images/banner3.webp">
+                <source media="(min-width: 768px)" srcset="shared/images/banner3-M.webp">
+                <img src="shared/images/banner3-S.webp" alt="Slide 3" />
+              </picture> 
             </div>
             <div class="slideItem">
-              <img src="shared/images/banner4.webp" alt="Slide 4" />
+              <picture>
+                <source media="(min-width: 992px)" srcset="shared/images/banner4.webp">
+                <source media="(min-width: 768px)" srcset="shared/images/banner4-M.webp">
+                <img src="shared/images/banner4-S.webp" alt="Slide 4" />
+              </picture> 
             </div>
           </div>
         </section>
@@ -215,10 +231,11 @@
             </h2>
           </div>
           <div class="parallaxImg">
-            <img
-              src="shared/images/veritas&probitas.webp"
-              alt="School Motto - Veritas & Probitas"
-            />
+            <picture>
+              <source media="(min-width: 992px)" srcset="shared/images/veritas&probitas.webp">
+              <source media="(min-width: 768px)" srcset="shared/images/veritas&probitas-M.webp">
+              <img src="shared/images/veritas&probitas-S.webp" alt="School Motto - Veritas & Probitas" />
+            </picture> 
           </div>
         </section>
 
