--- a/shared/header.html
+++ b/shared/header.html
@@ -67,7 +67,7 @@
   </div>
 </nav>
 
-<!-- Popup (Login Form) -->
+<!-- Popup (Login Form) --
 <div class="popup-overlay">
   <div class="popupDiv">
     <button class="closeBtn popupCloseBtn">
